[FIX] Webmail: adjust spacing and positioning of elements on the compose + search page & clear PHP warnings --- * [FIX] Webmail: adjust spacing and positionning of elements on the compose + search page & clear PHP warnings
See merge request tikiwiki/tiki!6445

--- a/themes/base_files/scss/_cypht-tiki.scss
+++ b/themes/base_files/scss/_cypht-tiki.scss
@@ -8,7 +8,6 @@
     .hide { display: none !important; }
     // override colors when not using cypht default theme
     img { opacity: 1 !important; max-width: 100%; }
-    main, div { border-radius: 0; }
     i.bi, .folders li, .inner_list li { color: var(--bs-body-color) !important; }
     .ui-widget-content { background-color: $tiki-ui-default-bg !important; }
     .ui-menu-item-wrapper { color: var(--bs-body-color) !important; }
@@ -188,7 +187,6 @@
 
     // message list / text
     .refresh_list, .list_settings_link { padding:0; margin: 5px 2px 0; }
-    .toggle_recipients { right: 25px; }
     .msg_date { font-weight: bold; }
     .msg_parts tr:not(:last-child) { border-bottom: 1px solid #444; }
     .part_desc, .part_size, .download_link { margin-left: 25px; }
@@ -196,25 +194,6 @@
     .imap_keyword { margin-top: 4px; }
     .msg_headers td { padding-right: 35px; }
     .noselect2 { display: none !important; }
-
-    //Search
-    .search_form {
-        form {
-            display: flex;
-            max-width: 100%;
-            flex-wrap: wrap;
-        }
-        .search_terms {
-            min-width: 100px;
-            max-width: 150px;
-            margin: 0px;
-            margin-bottom: 10px;
-        }
-    }
-
-    .save_search, .delete_search {
-        img { padding: 5px 0 0 5px; }
-    }
 
     .advanced_search_form {
         input[type="radio"], input[type="checkbox"] { margin-right: 5px; }
@@ -252,6 +231,9 @@
     }
     .collapsed ul {
         display: inherit;
+    }
+    main .container {
+        width: 100%;
     }
 }
 
